bind multiple groups, add camera

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ obj-rs = "0.6.3"
 bytemuck = "1.7.0"
 memoffset = "0.6.4"
 naga = { version = "0.5.0", features = ["wgsl-in"] }
+async-executor = "1.4.1"
